yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: sample
  sessionAffinity: None
  type: ClusterIP
