yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
  #annotations:
    # This tell cert-manager to use the ClusterIssuer named letsencrypt-sample
    # cert-manager.io/cluster-issuer: letsencrypt-sample
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        # This name must match the name of the ingress host
#        - dkrizic.prodyna.wtf
#      secretName: sample-tls
  rules:
    # Enter your own name <project_name>.prodyna.wtf
    - host: "dkrizic.prodyna.wtf"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample
                port:
                  number: 80
